# NDI-python

./: .gitignore  404.html  Pipfile  README.md  comparison_table.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.py
cache/: index.html
docs/: cache.md  file.md  fun.md  index.md
example/: Database (SQL) Creation.ipynb  Database Creation.ipynb  Demo_API_Core.ipynb  Demo_API_FileSystem.ipynb  Demo_API_SQL.ipynb  Demo_App.ipynb  Demo_Binary_Collection.ipynb  Demo_DAQ_Reader_Methods.ipynb  Demo_Database_FileSystem.ipynb  Demo_Database_FileSystem_ctx.ipynb  Demo_Database_Query.ipynb  Demo_Database_SQL.ipynb  Demo_Database_SQL_Pipeline.ipynb  Demo_Database_SQL_Relationships.ipynb  Demo_Database_SQL_ctx.ipynb  Demo_Document_Dependencies_FS.ipynb  Demo_Document_Dependencies_SQL.ipynb  Demo_FS_Document_Dependencies.ipynb  Demo_FS_Document_Extension.ipynb  Demo_FS_Document_Versions.ipynb  Demo_NDI.ipynb  Demo_Query_FileSystem.ipynb  Demo_SQL_CRUD.ipynb  Demo_SQL_Document_Dependencies.ipynb  Demo_SQL_Documents.ipynb  FileSystem_Database_Demo.ipynb  NDI_Demo.ipynb  Possible NDI API.ipynb  Spike Extraction.ipynb  Untitled.ipynb  example_Demo_Database_FileSystem.ipynb
file/: index.html
fun/: index.html
ndi/: __init__.py  channel.py  channel_type.py  clock_type.py  constants.py  context.py  core.py  daq_system.py  database.py  decorators.py  did_adapter.py  document.py  document_extension.py  epoch.py  exceptions.py  experiment.py  file_navigator.py  flatbuffer_object.py  ndi_object.py  probe.py  probe_type.py  query.py  schema  type.py  types.py  utils.py
search/: search_index.json
site/: 404.html  index.html
test_app/: subject_doc.py
tests/: utils.py  (+11 more)
(+310 files in other folders)
